--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ section .title::after{
 
 /* project section styling */
 .project .title::after{
-    content: "who with me";
+    content: "what I did";
 }
 .project .carousel .card{
     background: #222;
